intellij-plugin/Edu-Jarvis/src/com/jetbrains/edu/jarvis/grammar/ProblemSolvingLanguageParser.java
// Generated from ProblemSolvingLanguage.g4 by ANTLR 4.13.1
package com.jetbrains.edu.jarvis.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ProblemSolvingLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, VALUE=2, IF=3, ELSE=4, THEN=5, LOOP=6, EACH=7, REPEAT=8, UNTIL=9, 
		WHILE=10, DO=11, EMPTY=12, RANDOM=13, STRING_WORD=14, VARIABLE=15, MUTABLE=16, 
		VAR=17, VAL=18, SET=19, CALLED=20, FUNCTION=21, PRINT=22, STORE=23, CALL=24, 
		IN=25, CREATE=26, BOOL=27, ADD=28, EQUAL=29, RETURN=30, READ=31, WITH=32, 
		GET=33, NUMBER=34, STRING=35, CODE=36, IDENTIFIER=37, WS=38;
	public static final int
		RULE_sentence = 0, RULE_arbitraryText = 1, RULE_word = 2, RULE_value = 3, 
		RULE_contains = 4, RULE_expr = 5;
	private static String[] makeRuleNames() {
		return new String[] {
			"sentence", "arbitraryText", "word", "value", "contains", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", null, "'if'", null, "'then'", null, null, null, "'until'", 
			"'while'", "'do'", "'empty'", "'random'", "'string'", null, "'mutable'", 
			null, "'val'", null, null, null, null, null, null, "'in'", null, null, 
			null, null, null, null, "'with'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "VALUE", "IF", "ELSE", "THEN", "LOOP", "EACH", "REPEAT", 
			"UNTIL", "WHILE", "DO", "EMPTY", "RANDOM", "STRING_WORD", "VARIABLE", 
			"MUTABLE", "VAR", "VAL", "SET", "CALLED", "FUNCTION", "PRINT", "STORE", 
			"CALL", "IN", "CREATE", "BOOL", "ADD", "EQUAL", "RETURN", "READ", "WITH", 
			"GET", "NUMBER", "STRING", "CODE", "IDENTIFIER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProblemSolvingLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProblemSolvingLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ProblemSolvingLanguageParser.EOF, 0); }
		public List<ArbitraryTextContext> arbitraryText() {
			return getRuleContexts(ArbitraryTextContext.class);
		}
		public ArbitraryTextContext arbitraryText(int i) {
			return getRuleContext(ArbitraryTextContext.class,i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(13);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(12);
				arbitraryText();
				}
				break;
			}
			setState(15);
			expr(0);
			setState(17);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 154618363894L) != 0)) {
				{
				setState(16);
				arbitraryText();
				}
			}

			setState(19);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArbitraryTextContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ProblemSolvingLanguageParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ProblemSolvingLanguageParser.IDENTIFIER, i);
		}
		public List<TerminalNode> AND() { return getTokens(ProblemSolvingLanguageParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(ProblemSolvingLanguageParser.AND, i);
		}
		public List<TerminalNode> VALUE() { return getTokens(ProblemSolvingLanguageParser.VALUE); }
		public TerminalNode VALUE(int i) {
			return getToken(ProblemSolvingLanguageParser.VALUE, i);
		}
		public List<TerminalNode> ELSE() { return getTokens(ProblemSolvingLanguageParser.ELSE); }
		public TerminalNode ELSE(int i) {
			return getToken(ProblemSolvingLanguageParser.ELSE, i);
		}
		public List<TerminalNode> THEN() { return getTokens(ProblemSolvingLanguageParser.THEN); }
		public TerminalNode THEN(int i) {
			return getToken(ProblemSolvingLanguageParser.THEN, i);
		}
		public List<TerminalNode> LOOP() { return getTokens(ProblemSolvingLanguageParser.LOOP); }
		public TerminalNode LOOP(int i) {
			return getToken(ProblemSolvingLanguageParser.LOOP, i);
		}
		public List<TerminalNode> EACH() { return getTokens(ProblemSolvingLanguageParser.EACH); }
		public TerminalNode EACH(int i) {
			return getToken(ProblemSolvingLanguageParser.EACH, i);
		}
		public List<TerminalNode> WHILE() { return getTokens(ProblemSolvingLanguageParser.WHILE); }
		public TerminalNode WHILE(int i) {
			return getToken(ProblemSolvingLanguageParser.WHILE, i);
		}
		public List<TerminalNode> DO() { return getTokens(ProblemSolvingLanguageParser.DO); }
		public TerminalNode DO(int i) {
			return getToken(ProblemSolvingLanguageParser.DO, i);
		}
		public List<TerminalNode> EMPTY() { return getTokens(ProblemSolvingLanguageParser.EMPTY); }
		public TerminalNode EMPTY(int i) {
			return getToken(ProblemSolvingLanguageParser.EMPTY, i);
		}
		public List<TerminalNode> RANDOM() { return getTokens(ProblemSolvingLanguageParser.RANDOM); }
		public TerminalNode RANDOM(int i) {
			return getToken(ProblemSolvingLanguageParser.RANDOM, i);
		}
		public List<TerminalNode> STRING_WORD() { return getTokens(ProblemSolvingLanguageParser.STRING_WORD); }
		public TerminalNode STRING_WORD(int i) {
			return getToken(ProblemSolvingLanguageParser.STRING_WORD, i);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(ProblemSolvingLanguageParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ProblemSolvingLanguageParser.VARIABLE, i);
		}
		public List<TerminalNode> SET() { return getTokens(ProblemSolvingLanguageParser.SET); }
		public TerminalNode SET(int i) {
			return getToken(ProblemSolvingLanguageParser.SET, i);
		}
		public List<TerminalNode> CALLED() { return getTokens(ProblemSolvingLanguageParser.CALLED); }
		public TerminalNode CALLED(int i) {
			return getToken(ProblemSolvingLanguageParser.CALLED, i);
		}
		public List<TerminalNode> FUNCTION() { return getTokens(ProblemSolvingLanguageParser.FUNCTION); }
		public TerminalNode FUNCTION(int i) {
			return getToken(ProblemSolvingLanguageParser.FUNCTION, i);
		}
		public List<TerminalNode> PRINT() { return getTokens(ProblemSolvingLanguageParser.PRINT); }
		public TerminalNode PRINT(int i) {
			return getToken(ProblemSolvingLanguageParser.PRINT, i);
		}
		public List<TerminalNode> STORE() { return getTokens(ProblemSolvingLanguageParser.STORE); }
		public TerminalNode STORE(int i) {
			return getToken(ProblemSolvingLanguageParser.STORE, i);
		}
		public List<TerminalNode> CALL() { return getTokens(ProblemSolvingLanguageParser.CALL); }
		public TerminalNode CALL(int i) {
			return getToken(ProblemSolvingLanguageParser.CALL, i);
		}
		public List<TerminalNode> IN() { return getTokens(ProblemSolvingLanguageParser.IN); }
		public TerminalNode IN(int i) {
			return getToken(ProblemSolvingLanguageParser.IN, i);
		}
		public List<TerminalNode> CREATE() { return getTokens(ProblemSolvingLanguageParser.CREATE); }
		public TerminalNode CREATE(int i) {
			return getToken(ProblemSolvingLanguageParser.CREATE, i);
		}
		public List<TerminalNode> BOOL() { return getTokens(ProblemSolvingLanguageParser.BOOL); }
		public TerminalNode BOOL(int i) {
			return getToken(ProblemSolvingLanguageParser.BOOL, i);
		}
		public List<TerminalNode> REPEAT() { return getTokens(ProblemSolvingLanguageParser.REPEAT); }
		public TerminalNode REPEAT(int i) {
			return getToken(ProblemSolvingLanguageParser.REPEAT, i);
		}
		public List<TerminalNode> UNTIL() { return getTokens(ProblemSolvingLanguageParser.UNTIL); }
		public TerminalNode UNTIL(int i) {
			return getToken(ProblemSolvingLanguageParser.UNTIL, i);
		}
		public List<TerminalNode> ADD() { return getTokens(ProblemSolvingLanguageParser.ADD); }
		public TerminalNode ADD(int i) {
			return getToken(ProblemSolvingLanguageParser.ADD, i);
		}
		public List<TerminalNode> EQUAL() { return getTokens(ProblemSolvingLanguageParser.EQUAL); }
		public TerminalNode EQUAL(int i) {
			return getToken(ProblemSolvingLanguageParser.EQUAL, i);
		}
		public List<TerminalNode> RETURN() { return getTokens(ProblemSolvingLanguageParser.RETURN); }
		public TerminalNode RETURN(int i) {
			return getToken(ProblemSolvingLanguageParser.RETURN, i);
		}
		public List<TerminalNode> READ() { return getTokens(ProblemSolvingLanguageParser.READ); }
		public TerminalNode READ(int i) {
			return getToken(ProblemSolvingLanguageParser.READ, i);
		}
		public List<TerminalNode> WITH() { return getTokens(ProblemSolvingLanguageParser.WITH); }
		public TerminalNode WITH(int i) {
			return getToken(ProblemSolvingLanguageParser.WITH, i);
		}
		public List<TerminalNode> GET() { return getTokens(ProblemSolvingLanguageParser.GET); }
		public TerminalNode GET(int i) {
			return getToken(ProblemSolvingLanguageParser.GET, i);
		}
		public ArbitraryTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arbitraryText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).enterArbitraryText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).exitArbitraryText(this);
		}
	}

	public final ArbitraryTextContext arbitraryText() throws RecognitionException {
		ArbitraryTextContext _localctx = new ArbitraryTextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_arbitraryText);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(22); 
			_errHandler.sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					{
					setState(21);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 154618363894L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(24); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WordContext extends ParserRuleContext {
		public TerminalNode STRING_WORD() { return getToken(ProblemSolvingLanguageParser.STRING_WORD, 0); }
		public TerminalNode RANDOM() { return getToken(ProblemSolvingLanguageParser.RANDOM, 0); }
		public TerminalNode EMPTY() { return getToken(ProblemSolvingLanguageParser.EMPTY, 0); }
		public TerminalNode NUMBER() { return getToken(ProblemSolvingLanguageParser.NUMBER, 0); }
		public TerminalNode CODE() { return getToken(ProblemSolvingLanguageParser.CODE, 0); }
		public WordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_word; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).enterWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).exitWord(this);
		}
	}

	public final WordContext word() throws RecognitionException {
		WordContext _localctx = new WordContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_word);
		try {
			setState(33);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING_WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(26);
				match(STRING_WORD);
				}
				break;
			case RANDOM:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(27);
				match(RANDOM);
				setState(28);
				match(STRING_WORD);
				}
				}
				break;
			case EMPTY:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(29);
				match(EMPTY);
				setState(30);
				match(STRING_WORD);
				}
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 4);
				{
				setState(31);
				match(NUMBER);
				}
				break;
			case CODE:
				enterOuterAlt(_localctx, 5);
				{
				setState(32);
				match(CODE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(ProblemSolvingLanguageParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(ProblemSolvingLanguageParser.STRING, 0); }
		public TerminalNode CODE() { return getToken(ProblemSolvingLanguageParser.CODE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ProblemSolvingLanguageParser.IDENTIFIER, 0); }
		public TerminalNode BOOL() { return getToken(ProblemSolvingLanguageParser.BOOL, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 257832255488L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContainsContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode IN() { return getToken(ProblemSolvingLanguageParser.IN, 0); }
		public TerminalNode CODE() { return getToken(ProblemSolvingLanguageParser.CODE, 0); }
		public List<ArbitraryTextContext> arbitraryText() {
			return getRuleContexts(ArbitraryTextContext.class);
		}
		public ArbitraryTextContext arbitraryText(int i) {
			return getRuleContext(ArbitraryTextContext.class,i);
		}
		public ContainsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contains; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).enterContains(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).exitContains(this);
		}
	}

	public final ContainsContext contains() throws RecognitionException {
		ContainsContext _localctx = new ContainsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_contains);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			value();
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(38);
				arbitraryText();
				}
				break;
			}
			setState(41);
			match(IN);
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 154618363894L) != 0)) {
				{
				setState(42);
				arbitraryText();
				}
			}

			setState(45);
			match(CODE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(ProblemSolvingLanguageParser.PRINT, 0); }
		public List<ArbitraryTextContext> arbitraryText() {
			return getRuleContexts(ArbitraryTextContext.class);
		}
		public ArbitraryTextContext arbitraryText(int i) {
			return getRuleContext(ArbitraryTextContext.class,i);
		}
		public TerminalNode STRING() { return getToken(ProblemSolvingLanguageParser.STRING, 0); }
		public List<TerminalNode> CODE() { return getTokens(ProblemSolvingLanguageParser.CODE); }
		public TerminalNode CODE(int i) {
			return getToken(ProblemSolvingLanguageParser.CODE, i);
		}
		public TerminalNode CALL() { return getToken(ProblemSolvingLanguageParser.CALL, 0); }
		public TerminalNode FUNCTION() { return getToken(ProblemSolvingLanguageParser.FUNCTION, 0); }
		public TerminalNode WITH() { return getToken(ProblemSolvingLanguageParser.WITH, 0); }
		public TerminalNode GET() { return getToken(ProblemSolvingLanguageParser.GET, 0); }
		public TerminalNode STORE() { return getToken(ProblemSolvingLanguageParser.STORE, 0); }
		public TerminalNode IN() { return getToken(ProblemSolvingLanguageParser.IN, 0); }
		public TerminalNode VARIABLE() { return getToken(ProblemSolvingLanguageParser.VARIABLE, 0); }
		public TerminalNode CREATE() { return getToken(ProblemSolvingLanguageParser.CREATE, 0); }
		public List<WordContext> word() {
			return getRuleContexts(WordContext.class);
		}
		public WordContext word(int i) {
			return getRuleContext(WordContext.class,i);
		}
		public TerminalNode CALLED() { return getToken(ProblemSolvingLanguageParser.CALLED, 0); }
		public TerminalNode EQUAL() { return getToken(ProblemSolvingLanguageParser.EQUAL, 0); }
		public TerminalNode SET() { return getToken(ProblemSolvingLanguageParser.SET, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode VALUE() { return getToken(ProblemSolvingLanguageParser.VALUE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ProblemSolvingLanguageParser.IDENTIFIER, 0); }
		public TerminalNode IF() { return getToken(ProblemSolvingLanguageParser.IF, 0); }
		public TerminalNode BOOL() { return getToken(ProblemSolvingLanguageParser.BOOL, 0); }
		public ContainsContext contains() {
			return getRuleContext(ContainsContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(ProblemSolvingLanguageParser.ELSE, 0); }
		public TerminalNode NUMBER() { return getToken(ProblemSolvingLanguageParser.NUMBER, 0); }
		public TerminalNode THEN() { return getToken(ProblemSolvingLanguageParser.THEN, 0); }
		public TerminalNode REPEAT() { return getToken(ProblemSolvingLanguageParser.REPEAT, 0); }
		public TerminalNode UNTIL() { return getToken(ProblemSolvingLanguageParser.UNTIL, 0); }
		public TerminalNode WHILE() { return getToken(ProblemSolvingLanguageParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(ProblemSolvingLanguageParser.DO, 0); }
		public TerminalNode LOOP() { return getToken(ProblemSolvingLanguageParser.LOOP, 0); }
		public TerminalNode EACH() { return getToken(ProblemSolvingLanguageParser.EACH, 0); }
		public TerminalNode ADD() { return getToken(ProblemSolvingLanguageParser.ADD, 0); }
		public TerminalNode RETURN() { return getToken(ProblemSolvingLanguageParser.RETURN, 0); }
		public TerminalNode READ() { return getToken(ProblemSolvingLanguageParser.READ, 0); }
		public TerminalNode AND() { return getToken(ProblemSolvingLanguageParser.AND, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProblemSolvingLanguageListener ) ((ProblemSolvingLanguageListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(253);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,59,_ctx) ) {
			case 1:
				{
				setState(48);
				match(PRINT);
				setState(50);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(49);
					arbitraryText();
					}
					break;
				}
				setState(53);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(52);
					_la = _input.LA(1);
					if ( !(_la==STRING || _la==CODE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				}
				}
				break;
			case 2:
				{
				setState(55);
				match(CALL);
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 154618363894L) != 0)) {
					{
					setState(56);
					arbitraryText();
					}
				}

				setState(59);
				match(CODE);
				setState(61);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(60);
					match(FUNCTION);
					}
					break;
				}
				setState(72);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(63);
					match(WITH);
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 154618363894L) != 0)) {
						{
						setState(64);
						arbitraryText();
						}
					}

					setState(68); 
					_errHandler.sync(this);
					_alt = 1+1;
					do {
						switch (_alt) {
						case 1+1:
							{
							{
							setState(67);
							match(CODE);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(70); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
					} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					break;
				}
				setState(75);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(74);
					arbitraryText();
					}
					break;
				}
				setState(82);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(77);
					match(GET);
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 154618363894L) != 0)) {
						{
						setState(78);
						arbitraryText();
						}
					}

					setState(81);
					match(CODE);
					}
					break;
				}
				}
				break;
			case 3:
				{
				setState(84);
				match(STORE);
				setState(86);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(85);
					arbitraryText();
					}
					break;
				}
				setState(88);
				match(IN);
				setState(90);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
				case 1:
					{
					setState(89);
					arbitraryText();
					}
					break;
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VARIABLE) {
					{
					setState(92);
					match(VARIABLE);
					}
				}
